created autohire button

--- a/frontend/src/app/hiring/hiring-admin/hiring-admin.component.html
+++ b/frontend/src/app/hiring/hiring-admin/hiring-admin.component.html
@@ -20,6 +20,10 @@
           <mat-icon>tune</mat-icon>
           <span>Edit Hiring Levels</span>
         </button>
+        <button mat-menu-item>
+          <mat-icon>auto_awesome</mat-icon>
+          <span>Run Autodraft</span>
+        </button>
       </mat-menu>
       <button mat-flat-button routerLink="/hiring/summary">HR Onboarding</button>
       <mat-form-field class="term-selector" appearance="outline">
